--- a/public/scss/elements/_accordion.scss
+++ b/public/scss/elements/_accordion.scss
@@ -31,7 +31,7 @@
 			line-height: 40px;
 			text-align: center;
 			border-radius: $border_radius;
-			background: #7C58D3;
+			background: #A04C22;
 			font-family: 'Font Awesome 5 Pro';
 		}
 		&:focus {
