--- a/public/scss/_variable.scss
+++ b/public/scss/_variable.scss
@@ -3,7 +3,7 @@ $font_body: 'Lato', sans-serif;
 $font_heading: 'Nunito', sans-serif;
 
 // Default Color
-$color_primary: #A04C22;
+$color_primary: #7C58D3;
 $color_danger: #FF47A2;
 $color_warning: #FFDA47;
 $color_light: #FBF9FF;
