--- a/public/css/header-style.css
+++ b/public/css/header-style.css
@@ -1011,7 +1011,7 @@ ul li {
   img.contact-style {
     position: absolute;
     right: 0;
-    top: -220px;
+    bottom: 0px;
     @media only screen and (max-width: 1199px) {
       display: none;
     }
@@ -1022,6 +1022,7 @@ ul li {
     position: absolute;
     right: 8%;
     width: 33%;
+    bottom: 0;
     @media only screen and (max-width: 991px) {
       display: none;
     }
